--- a/014.React학습/react-app/chan-app/package.json
+++ b/014.React학습/react-app/chan-app/package.json
@@ -2,6 +2,8 @@
   "name": "chan-app",
   "version": "0.1.0",
   "private": true,
+  
+  "homepage": "https://tztx2004.github.io/dc-app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
